// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/TextInput default 1`] = `
<input
  className="sc-ifAKCX copsFo"
  placeholder="placeholder"
/>
`;

exports[`Storyshots Input/TextInput error 1`] = `
<input
  className="sc-ifAKCX fgqvFh"
  placeholder="placeholder"
/>
`;

exports[`Storyshots Input/TextInput focus 1`] = `
<input
  className="sc-ifAKCX kVHuxz"
  placeholder="placeholder"
/>
`;
